# TrabalhoCG

./: README.md
Fase1/: CMakeLists.txt
Fase1/src/ENGINE/: engine.cpp
Fase1/src/GENERATOR/: generator.cpp
Fase1/src/MODELS/: bigcone.3d  bigsphere.3d  box.3d  cone.3d  demo_1.xml  demo_2.xml  demo_3.xml  demo_4.xml  plane.3d  sphere.3d  torus.3d
Fase2/: CMakeLists.txt
Fase2/src/ENGINE/: Group.cpp  Group.hpp  engine.cpp
Fase2/src/GENERATOR/: generator.cpp
Fase2/src/MODELS/: boxtest_2_1.3d  conetest_2_2.3d  solarSystem.xml  sphere.3d  spheretest.3d  spheretest_2_2.3d  test_2_1.xml  test_2_2.xml  test_2_3.xml  test_2_4.xml
Fase3/: CMakeLists.txt
Fase3/src/ENGINE/: Group.cpp  Transformation.cpp  engine.cpp
Fase3/src/ENGINE/headers/: Group.hpp  catmull.hpp
Fase3/src/GENERATOR/: bezier.cpp  generator.cpp
Fase3/src/MODELS/: bezier.3d  solarSystem.xml  sphere.3d  torus.3d
Fase4/: CMakeLists.txt
Fase4/src/ENGINE/: Group.cpp  catmull.cpp  engine.cpp
Fase4/src/ENGINE/headers/: Group.hpp  Transformation.hpp
Fase4/src/GENERATOR/: bezier.cpp  generator.cpp
Fase4/src/GENERATOR/headers/: bezier.hpp
Fase4/src/MODELS/: bezier.3d  box_nt.3d  cone.3d  cone_nt.3d  demo1.xml  demo2.xml  demo3.xml  flatTorus.3d  plane_nt.3d  solarSystem.xml  sphere.3d  sphere_nt.3d  torus.3d  torus_nt.3d
Fase4/src/MODELS/tests/: test_4_2.xml  test_4_3.xml  test_4_7.xml
